Snippets can now be saved and loaded

--- a/final/FinalProject/settings/settings.json
+++ b/final/FinalProject/settings/settings.json
@@ -1,4 +1,4 @@
 {
-  "selected_language": "Python",
-  "snippets_path": "snippets/"
+  "selected_language": "C#",
+  "snippets_path": "/Users/alexdombroski/Library/Application Support/Code/User/snippets/"
 }
