Simplified code reading process and added autosave to snippet creater. Modified code to fit 2 kinds of snippets

--- a/final/FinalProject/settings/settings.json
+++ b/final/FinalProject/settings/settings.json
@@ -1,4 +1,4 @@
 {
-  "selected_language": "C#",
-  "snippets_path": "/Users/alexdombroski/Library/Application Support/Code/User/snippets/"
+  "selected_language": "LocalPython",
+  "snippets_path": "/Users/alexdombroski/vscode/python/tests/.vscode/"
 }
