--- a/final/FinalProject/settings/settings.json
+++ b/final/FinalProject/settings/settings.json
@@ -1,4 +1,4 @@
 {
   "selected_language": "LocalPython",
-  "snippets_path": "/Users/alexdombroski/vscode/python/tests/.vscode/"
+  "snippets_path": "snippets/"
 }
